// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Book with full book 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          }
        }
        style={
          Object {
            "backgroundColor": "#dddddd",
            "height": 64,
            "margin": 10,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderTopWidth": 0.5,
            "flex": 1,
            "marginRight": 10,
            "padding": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Object {
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            guri & gura & can I handle long long long title?
          </Text>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#9E9E9E",
              "fontSize": 12,
            }
          }
        >
          author foo
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Book with short title 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          }
        }
        style={
          Object {
            "backgroundColor": "#dddddd",
            "height": 64,
            "margin": 10,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderTopWidth": 0.5,
            "flex": 1,
            "marginRight": 10,
            "padding": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 20,
                },
                Object {
                  "color": "#03a9f4",
                  "marginRight": 10,
                },
                Object {
                  "fontFamily": "ExponentFont-mock-awesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Object {
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            guri & gura
          </Text>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#9E9E9E",
              "fontSize": 12,
            }
          }
        >
          author foo
        </Text>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#4CAF50",
              }
            }
          >
            貸出可
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots Book with thumbnail 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
        },
        undefined,
      ]
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          }
        }
        style={
          Object {
            "backgroundColor": "#dddddd",
            "height": 64,
            "margin": 10,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "borderBottomWidth": 0.5,
            "borderColor": "rgba(0, 0, 0, 0.1)",
            "borderTopWidth": 0.5,
            "flex": 1,
            "marginRight": 10,
            "padding": 5,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Object {
                "flex": 1,
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          />
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            Object {
              "color": "#9E9E9E",
              "fontSize": 12,
            }
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots BookList with one 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "author": "author foo",
          "isbn": "9784834032147",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          "title": "guri & gura",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  guri & gura
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                author foo
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Storyshots BookList with three 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "author": "author foo",
          "isbn": "9784834032147",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          "title": "guri & gura",
        },
        Object {
          "author": "仲田利津子/黒田昌代",
          "isbn": "9784828867472",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/7472/9784828867472.jpg?_ex=200x200",
          "title": "はじめてのABCえほん",
        },
        Object {
          "author": "中川李枝子/大村百合子",
          "isbn": "9784834000825",
          "reserveUrl": "http://api.calil.jp/reserve?id=af299d780fe86cf8b116dfda4725dc0f",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/0825/9784834000825.jpg?_ex=200x200",
          "title": "ぐりとぐら(複数蔵書)",
        },
        Object {
          "author": "中川李枝子/山脇百合子（絵本作家）",
          "isbn": "9784834014655",
          "reserveUrl": "https://library.city.fuchu.tokyo.jp/licsxp-opac/WOpacTifTilListToTifTilDetailAction.do?tilcod=1009710046217",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/4655/9784834014655.jpg?_ex=200x200",
          "title": "ぐりとぐらの1ねんかん(単一蔵書)",
        },
        Object {
          "author": "坂本貴史",
          "isbn": "9784862463241",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/3241/9784862463241.jpg?_ex=200x200",
          "title": "IA／UXプラクティス",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  guri & gura
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                author foo
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/7472/9784828867472.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  はじめてのABCえほん
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                仲田利津子/黒田昌代
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/0825/9784834000825.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  ぐりとぐら(複数蔵書)
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                中川李枝子/大村百合子
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/4655/9784834014655.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  ぐりとぐらの1ねんかん(単一蔵書)
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                中川李枝子/山脇百合子（絵本作家）
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/3241/9784862463241.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  IA／UXプラクティス
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                坂本貴史
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Storyshots BookList with two 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <RCTScrollView
    data={
      Array [
        Object {
          "author": "author foo",
          "isbn": "9784834032147",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
          "title": "guri & gura",
        },
        Object {
          "author": "仲田利津子/黒田昌代",
          "isbn": "9784828867472",
          "thumbnail": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/7472/9784828867472.jpg?_ex=200x200",
          "title": "はじめてのABCえほん",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/2147/9784834032147.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  guri & gura
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                author foo
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              undefined,
            ]
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "uri": "http://thumbnail.image.rakuten.co.jp/@0_mall/book/cabinet/7472/9784828867472.jpg?_ex=200x200",
                }
              }
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "height": 64,
                  "margin": 10,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "borderBottomWidth": 0.5,
                  "borderColor": "rgba(0, 0, 0, 0.1)",
                  "borderTopWidth": 0.5,
                  "flex": 1,
                  "marginRight": 10,
                  "padding": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={false}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": undefined,
                        "fontSize": 20,
                      },
                      Object {
                        "color": "#03a9f4",
                        "marginRight": 10,
                      },
                      Object {
                        "fontFamily": "ExponentFont-mock-awesome",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                    ]
                  }
                >
                  
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  numberOfLines={2}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "fontWeight": "500",
                    }
                  }
                >
                  はじめてのABCえほん
                </Text>
              </View>
              <Text
                accessible={true}
                allowFontScaling={true}
                disabled={false}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Object {
                    "color": "#9E9E9E",
                    "fontSize": 12,
                  }
                }
              >
                仲田利津子/黒田昌代
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "row",
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  disabled={false}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#4CAF50",
                    }
                  }
                >
                  貸出可
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`Storyshots LibraryStatus with loading 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "blue",
        }
      }
    >
      bar
    </Text>
    <ActivityIndicator
      animating={true}
      color="#999999"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "marginLeft": 5,
        }
      }
    />
  </View>
</View>
`;

exports[`Storyshots LibraryStatus with text and color 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F5FCFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "red",
        }
      }
    >
      foo
    </Text>
  </View>
</View>
`;
